--- a/css/accueil.css
+++ b/css/accueil.css
@@ -44,6 +44,10 @@ h1 {
   align-items: center;
 }
 
+#noBtn {
+  touch-action: manipulation;
+}
+
 .btn {
   padding: 1rem 2.5rem;
   font-size: 1.2rem;
@@ -146,7 +150,7 @@ h1 {
   }
 
   #buttons p{
-    font-size: 20px!important;
+    font-size: 20px!important;  
   }
   
 }
