--- a/css/accueil.css
+++ b/css/accueil.css
@@ -88,6 +88,13 @@ h1 {
   box-shadow: 0 8px 20px rgba(255, 77, 109, 0.4);
 }
 
+.btn-no.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  pointer-events: none; /* 🔑 bloque vraiment */
+  transform: translate(0, 0);
+}
+
 .btn-no:hover {
   background-color: rgba(255, 77, 109, 0.1);
   transform: scale(1.03);
